# personal-ai-assistant

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  config.yaml.example  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
src/assistant/: agent.py  auth.py  cli.py  config.py  llm.py
src/assistant/tools/: calendar.py  documents.py  notes.py  registry.py  search.py  teams.py
tests/: conftest.py  test_agent.py  test_auth.py  test_cli.py  test_config.py  test_llm.py  test_tools_calendar.py  test_tools_documents.py  test_tools_notes.py  test_tools_registry.py  test_tools_search.py  test_tools_teams.py
