[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-ai-assistant"
version = "0.1.0"
description = "Local LLM-powered personal CLI assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
    "msal>=1.28.0",
    "duckduckgo-search>=6.0.0",
    "pypdf>=4.0.0",
]

[project.scripts]
pai = "assistant.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line-too-long — handled by formatter
    "B008",    # function-call-in-default-argument (Typer uses this)
    "RUF012",  # mutable-class-attributes — too noisy for plain dicts
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest & coverage
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=assistant",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=50",
]

[tool.coverage.run]
source = ["src/assistant"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
